<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:background="#F0F2F5"
     android:fitsSystemWindows="true"
     tools:ignore="UnusedAttribute"
     android:paddingTop="24dp">

    <TextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:textSize="24sp"
         android:textColor="#000000"
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:id="@+id/textView"
         android:text="@string/main_title"
         android:textStyle="bold" />

    <FrameLayout
         android:layout_height="219dp"
         android:layout_width="365dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/bg_image_border"
         app:layout_constraintTop_toTopOf="parent"
         android:padding="2dp"
         app:layout_constraintStart_toStartOf="parent"
         android:clipToOutline="true"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="80dp"
         android:layout_marginStart="10dp"
         android:id="@+id/imageContainer">

        <LinearLayout
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:background="@drawable/bg_card_border"
             android:orientation="vertical"
             android:clipToOutline="true">

            <ImageView
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 android:scaleType="centerCrop"
                 android:src="@drawable/xp_bg"
                 android:contentDescription="@null"
                 android:id="@+id/foregroundImage" />

        </LinearLayout>

    </FrameLayout>

    <Button
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_marginEnd="16dp"
         app:layout_constraintTop_toTopOf="parent"
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"
         android:id="@+id/restartButtonBackground"
         android:text="@string/config_modify" />

    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="160dp"
         android:gravity="center_horizontal"
         app:layout_constraintTop_toTopOf="@id/imageContainer"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="@id/imageContainer"
         app:layout_constraintBottom_toBottomOf="@id/imageContainer"
         android:layout_marginStart="13dp"
         android:id="@+id/infoLayout">

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_marginBottom="4dp"
             android:gravity="center"
             android:textSize="14sp"
             android:textColor="#FF188093"
             android:id="@+id/statusTextView"
             android:text="@string/module_status"
             android:textStyle="bold" />

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:gravity="center"
             android:textSize="12sp"
             android:textColor="#FF188093"
             android:id="@+id/SoftwareVersion"
             android:text="@string/version_info" />

    </LinearLayout>

    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="330dp"
         android:orientation="vertical"
         android:layout_marginTop="340dp"
         android:background="@drawable/bg_card_border"
         android:gravity="center_horizontal"
         android:minHeight="240dp"
         app:layout_constraintTop_toTopOf="parent"
         android:paddingVertical="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:paddingHorizontal="20dp"
         android:id="@+id/bottomCard">

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_marginBottom="12dp"
             android:textSize="18sp"
             android:textColor="#212121"
             android:id="@+id/tvFunctionIntro"
             android:text="@string/overview_title"
             android:textStyle="bold" />

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_marginBottom="12dp"
             android:textSize="14sp"
             android:textColor="#757575"
             android:id="@+id/tvIntroduction"
             android:text="@string/module_intro" />

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_marginBottom="12dp"
             android:textAlignment="viewStart"
             android:textSize="14sp"
             android:textColor="#757575"
             android:id="@+id/tv_announcement_content"
             android:text="@string/announcement_content" />

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:clickable="true"
             android:textSize="14sp"
             android:textColor="#AC0505"
             android:focusable="true"
             android:id="@+id/tvboast"
             android:text="@string/more_magic" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>