<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingTop="16dp">

    <FrameLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:clipToOutline="true"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:id="@+id/home_card_container">

        <eightbitlab.com.blurview.BlurView
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:background="@drawable/bg_card_bordera"
             app:blurOverlayColor="#40FFFFFF"
             android:clipToOutline="true"
             android:id="@+id/home_blur_view" />

        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:gravity="center_horizontal"
             android:background="@android:color/transparent"
             android:padding="20dp"
             android:orientation="vertical">

            <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_marginBottom="12dp"
                 android:textSize="16sp"
                 android:textColor="#333333"
                 android:text="@string/fluid_cloud_position"
                 android:textStyle="bold" />

            <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:weightSum="2"
                 android:layout_marginBottom="16dp"
                 android:orientation="horizontal">

                <EditText
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_marginEnd="4dp"
                     android:background="@drawable/bg_edittext"
                     android:hint="@string/hint_left_margin"
                     android:padding="12dp"
                     android:textSize="16sp"
                     android:textColor="#000000"
                     android:layout_weight="1"
                     android:inputType="numberDecimal"
                     android:id="@+id/edit_text1" />

                <EditText
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:background="@drawable/bg_edittext"
                     android:hint="@string/hint_right_margin"
                     android:padding="12dp"
                     android:textSize="16sp"
                     android:textColor="#000000"
                     android:layout_marginStart="4dp"
                     android:layout_weight="1"
                     android:inputType="numberDecimal"
                     android:id="@+id/edit_text2" />

            </LinearLayout>

            <Button
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:background="@drawable/bg_button"
                 android:padding="12dp"
                 android:textSize="16sp"
                 android:stateListAnimator="@null"
                 android:textColor="#FFFFFF"
                 android:id="@+id/action_button"
                 android:text="@string/button_submit"
                 android:textStyle="bold" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:clipToOutline="true"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="32dp"
         android:id="@+id/shape_card_container">

        <eightbitlab.com.blurview.BlurView
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:background="@drawable/bg_card_bordera"
             app:blurOverlayColor="#40FFFFFF"
             android:clipToOutline="true"
             android:id="@+id/shape_blur_view" />

        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:gravity="center_horizontal"
             android:background="@android:color/transparent"
             android:padding="20dp"
             android:orientation="vertical">

            <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_marginBottom="12dp"
                 android:textSize="16sp"
                 android:textColor="#333333"
                 android:text="@string/miscellaneous"
                 android:textStyle="bold" />

            <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:gravity="center_vertical"
                 android:paddingRight="8dp"
                 android:orientation="horizontal"
                 android:paddingLeft="8dp">

                <TextView
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:textSize="16sp"
                     android:textColor="#333333"
                     android:layout_weight="1"
                     android:text="@string/music_shape_label" />

                <ToggleButton
                     android:layout_height="22dp"
                     android:layout_width="44dp"
                     android:textOn=""
                     android:background="@drawable/switch_selector"
                     android:padding="0dp"
                     style="?android:attr/borderlessButtonStyle"
                     android:textOff=""
                     android:checked="false"
                     android:id="@+id/shape_switch" />

            </LinearLayout>

            <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:gravity="center_vertical"
                 android:paddingRight="8dp"
                 android:orientation="horizontal"
                 android:paddingLeft="8dp"
                 android:layout_marginTop="16dp">

                <TextView
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:textSize="16sp"
                     android:textColor="#333333"
                     android:layout_weight="1"
                     android:text="@string/ringer_toggle" />

                <ToggleButton
                     android:layout_height="22dp"
                     android:layout_width="44dp"
                     android:textOn=""
                     android:background="@drawable/switch_selector"
                     android:padding="0dp"
                     style="?android:attr/borderlessButtonStyle"
                     android:textOff=""
                     android:checked="false"
                     android:id="@+id/mute_switch" />

            </LinearLayout>

            <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:gravity="center_vertical"
                 android:paddingRight="8dp"
                 android:orientation="horizontal"
                 android:paddingLeft="8dp"
                 android:layout_marginTop="16dp">

                <TextView
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:textSize="16sp"
                     android:textColor="#333333"
                     android:layout_weight="1"
                     android:text="@string/otg_toggle" />

                <ToggleButton
                     android:layout_height="22dp"
                     android:layout_width="44dp"
                     android:textOn=""
                     android:background="@drawable/switch_selector"
                     android:padding="0dp"
                     style="?android:attr/borderlessButtonStyle"
                     android:textOff=""
                     android:checked="false"
                     android:id="@+id/otg_switch" />

            </LinearLayout>

            <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:gravity="center_vertical"
                 android:paddingRight="8dp"
                 android:orientation="horizontal"
                 android:paddingLeft="8dp"
                 android:layout_marginTop="16dp">

                <TextView
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:textSize="16sp"
                     android:textColor="#333333"
                     android:layout_weight="1"
                     android:text="@string/tile_2x1_background_fill" />

                <ToggleButton
                     android:layout_height="22dp"
                     android:layout_width="44dp"
                     android:textOn=""
                     android:background="@drawable/switch_selector"
                     android:padding="0dp"
                     style="?android:attr/borderlessButtonStyle"
                     android:textOff=""
                     android:checked="false"
                     android:id="@+id/bg2x1_switch" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>