<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
    <ImageView
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:scaleType="centerCrop"
         android:src="@drawable/background_imagea" />
    <FrameLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:paddingBottom="70dp"
         android:id="@+id/content_container">
        <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:textSize="20sp"
             android:textColor="#000000"
             android:layout_marginTop="46dp"
             android:layout_marginStart="24dp"
             android:id="@+id/title_app_name"
             android:layout_gravity="top|start"
             android:text="@string/app_name"
             android:textStyle="bold" />
        <Button
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_marginEnd="24dp"
             android:textSize="13sp"
             android:stateListAnimator="@null"
             android:textColor="#FFFFFF"
             android:layout_marginTop="36dp"
             android:layout_gravity="top|end"
             android:minHeight="36dp"
             android:paddingVertical="8dp"
             android:backgroundTint="#4386EF"
             android:textAllCaps="false"
             android:paddingHorizontal="12dp"
             android:id="@+id/restartButtonBackground"
             android:text="@string/restart_scope" />
        <androidx.viewpager2.widget.ViewPager2
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:clipChildren="false"
             android:clipToPadding="false"
             android:layout_marginTop="100dp"
             android:id="@+id/view_pager" />
    </FrameLayout>
    <FrameLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:paddingBottom="0dp"
         android:clipToOutline="true"
         android:id="@+id/blur_container"
         android:layout_gravity="bottom"
         android:paddingTop="2dp">
        <eightbitlab.com.blurview.BlurView
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             app:blurOverlayColor="#40FFFFFF"
             android:clipToOutline="true"
             android:id="@+id/bottom_blur_view" />
        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:weightSum="2"
             android:paddingEnd="16dp"
             android:background="@android:color/transparent"
             android:orientation="horizontal"
             android:paddingStart="16dp">
            <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 android:gravity="center"
                 android:clickable="true"
                 android:padding="8dp"
                 android:orientation="vertical"
                 android:layout_weight="1"
                 android:focusable="true"
                 android:id="@+id/option_home">
                <ImageView
                     android:layout_height="28dp"
                     android:layout_width="28dp"
                     android:src="@drawable/ic_home"
                     android:id="@+id/icon_home" />
                <TextView
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:textSize="12sp"
                     android:textColor="#4386EF"
                     android:layout_marginTop="2dp"
                     android:id="@+id/text_home"
                     android:text="@string/home"
                     android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 android:gravity="center"
                 android:clickable="true"
                 android:padding="8dp"
                 android:orientation="vertical"
                 android:layout_weight="1"
                 android:focusable="true"
                 android:id="@+id/option_about">
                <ImageView
                     android:layout_height="28dp"
                     android:layout_width="28dp"
                     android:src="@drawable/ic_info"
                     android:id="@+id/icon_about" />
                <TextView
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:textSize="12sp"
                     android:textColor="#999999"
                     android:layout_marginTop="2dp"
                     android:id="@+id/text_about"
                     android:text="@string/about"
                     android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>
